--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "채팅앱 만들기 연습~",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
